
- Testing installation of Handbrake / Makekmv 32-Bit
- Created tar.bz2 archives for linux
 
1787142 2010-06-15 18:21  HandBrake-0.9.4.tar.bz2
3661919 2010-06-28 23:16  makemkv_v1.5.6_beta_bin.tar.bz2
1598293 2010-06-28 23:18  makemkv_v1.5.6_beta_oss.tar.bz2

- Changed all output from shell-scripts to the default addon-directory   
- Intergrate this Changelog.txt inside the root-directory of the addon  
- Added 32/64 deb-packet for linux

29/06/10        We

- Activate svn at google.code 
  Anomyous read-only cvs access with the following command is possible 
  svn checkout http://swiss-army-knife.googlecode.com/svn/trunk/ swiss-army-knife-read-only
 
- Added linux-shell/setup.sh 
  This file needs to executed with uid 0 

30/06/10	We

- Added md5 checksumms for the debian installer files 
- Added gui-api functions to blueray-transcode.sh 
- Testing the 2 blue-ray functions 
- Tested DVDState function inside a new-svn build (works)
- Create shell-linux/state.sh to detect bluray and dvd-media  
- Show roland svn 
- Testet state.sh and made some minor changes ...

01/07/10       We 

- Add a nice looking icon to the addon like suggested inside 
  the xbmc-forum.
- Yes it is called bluray and not blueray ... I change all references ....
  ;-( Bloody ... wihtout sed I would be lost ...


02/07/10       We 	R74	
- Test icon.png on SV-Build (works)
- Test bluray-functions bluray-chapter.sh 
                        bluray-transcode.sh 
- Added default size value for single dvd
- Added default port for netcat 
- Addes OS-linux.py


03/07/10       We 

- loading configuration into memory 
- GUIlog and OSlog functions 
- A lot of changes 

04/07/10       We

- Somtimes stream-server was not killed inside 
- bluray-chapter.sh needs very long to execute ....
- GUISelectList added
- some sucess ... it shows the bluray track list inside the 
  gui to select. (yes ... it is slow ...)
- I ripped my first bluray ... over my gui .. but it crashed 
  xbmc after exit ... 






   